removed superflous cflags
git-svn-id: svn+ssh://warp/project/srmio/trunk@9 481d0cf5-cefc-463a-8474-606d29eec73c

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 
-# TODO: properly test for glib and gstreamer
-
-AM_CFLAGS=-g -Wall -Wextra # -DDEBUG
+#AM_CFLAGS=-g -Wall -Wextra -DDEBUG
 
 man1_MANS=srmcmd.man
 EXTRA_DIST=$(MANS)
