--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,11 @@ AUTOMAKE_OPTIONS=foreign
 #AM_CFLAGS=-g -Wall -Wextra -DDEBUG
 
 man1_MANS=srmcmd.man
-EXTRA_DIST=$(MANS)
+EXTRA_DIST=$(MANS) \
+	debug.h
 
-include_HEADERS=srmio.h
+include_HEADERS= \
+	srmio.h
 
 lib_LTLIBRARIES=libsrmio.la
 libsrmio_la_SOURCES= \
