fixed broken %lf formats, got rid of plain "float"s fixed ->fixup check for gapfill/chunk_add check mktime return values avoid strndup for portability srmfile: properly refuse writing invalid files wait for data being written to PCV with tcdrain(), check write() return value use cfsetispeed/cfsetospeed avoid %m printf format for portability
git-svn-id: svn+ssh://warp/project/srmio/trunk@30 481d0cf5-cefc-463a-8474-606d29eec73c

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([srmio], [0.0.2], [bj@zuto.de])
+AC_INIT([srmio], [0.0.3], [bj@zuto.de])
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_CONFIG_SRCDIR([srmio.h])
 AC_CONFIG_HEADER([config.h])
@@ -28,7 +28,7 @@ AC_FUNC_MALLOC
 AC_FUNC_MEMCMP
 AC_FUNC_MKTIME
 AC_FUNC_REALLOC
-AC_CHECK_FUNCS([localtime_r memset strdup strndup])
+AC_CHECK_FUNCS([localtime_r memset strdup ])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
