made autoconf check for localtime_r
git-svn-id: svn+ssh://warp/project/srmio/trunk@38 481d0cf5-cefc-463a-8474-606d29eec73c

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,7 @@ AC_FUNC_MALLOC
 AC_FUNC_MEMCMP
 AC_FUNC_MKTIME
 AC_FUNC_REALLOC
+AC_CHECK_FUNCS([localtime_r ])
 AC_CHECK_FUNCS([memset strdup strerror getopt_long ])
 
 for func in memset strdup strerror getopt_long; do
