automatically put package version into man page
Turned manpage into a template. Adjusted Makefile to fill this template
with the Package version during build.

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,3 +33,6 @@ bin_PROGRAMS=srmcmd
 srmcmd_LDFLAGS= -lsrmio
 srmcmd_SOURCES= \
 	srmcmd.c
+
+.man_in.man:
+	sed -e 's/%PACKAGE_VERSION%/$(PACKAGE_VERSION)/' $< > $@
