added script to run autotools
The source tree doesn't have prebuilt configure, Makefile.am and friends.
Added script to invoke autotools to generate them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,7 @@ EXTRA_DIST=$(MANS) \
 	debian/changelog \
 	debian/dirs \
 	debian/control \
+	genautomake.sh \
 	genconfheader.sh
 
 include_HEADERS= \
