script friendly srmcmd options
Changed --name/-n option to work when reading files.
Added --date/-d option to get start time of recorded data.
Both allow scripts to build srmwin compatible filenams.
Added srmwinget.sh example to show this.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,8 @@ EXTRA_DIST=$(MANS) \
 	debian/dirs \
 	debian/control \
 	genautomake.sh \
-	genconfheader.sh
+	genconfheader.sh \
+	srmwinget.sh
 
 include_HEADERS= \
 	srmio.h \
