--- a/debian/rules
+++ b/debian/rules
@@ -68,7 +68,7 @@ binary-arch: build install
 	dh_testroot
 	dh_installchangelogs 
 	dh_installdocs
-#	dh_installexamples
+	dh_installexamples srmwinget.sh
 #	dh_install
 #	dh_installmenu
 #	dh_installdebconf	
