optionally build with verbose error reporting
added compile time option to make the library print more detailed error
messages. Actually I consider this a workaround. Hopefully this will go
away once I manage to find a better way for error reporting.

--- a/debian/rules
+++ b/debian/rules
@@ -18,6 +18,7 @@ configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
 	./configure \
+		CFLAGS="-g -DVERBOSE" \
 		--host=$(DEB_HOST_GNU_TYPE) \
 		--build=$(DEB_BUILD_GNU_TYPE) \
 		--prefix=/usr \
