added support for writing different file formats
added support for writing a custom file format plus options to select
which format to write.

This helps working around the srm file format limitation for maximum
covered time in one file (the relative timestamp of each block is too
small)

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,9 +33,11 @@ lib_LTLIBRARIES=libsrmio.la
 libsrmio_la_SOURCES= \
 	common.h \
 	\
+	ftypes.c \
 	srmdata.c \
 	srmfile.c \
-	srmpc.c
+	srmpc.c \
+	wkt.c
 
 bin_PROGRAMS=srmcmd
 
