major API rework + feature additions
* abstraction layer for serial access to allow different means (termios,
  d2xxx, win32)
* abstraction layer for distinct PowerControl protocols.
* moved all byte conversions + swapping to seperate module.
* moved chunk and marker "classes" to seperate modules.
* moved fixup to seperate module.
* added ways for splitting data on gaps or recint changes
* got rid of xfer handle, as there's only one at a time
* nuked firmware whitelist
* nuked logging callback (ongoing), will provide wordy error messages by
  other means.
* added knobs to prefer baud/parity settings for PCV.
* changed file reading/writing to use a supplied stdio handle.
* stop sharing return values for "success" and real data - this is
  confusing.
* moved most allocations to the caller (chunks, blocks, ...) allowing more
  flexibility.
* rolled out enums for most options for better readability
* seperated object creation ( foo_new() ) and parameter ( foo_set_bar() )
  for readability and extensibility.

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,11 +33,20 @@ lib_LTLIBRARIES=libsrmio.la
 libsrmio_la_SOURCES= \
 	common.h \
 	\
-	ftypes.c \
+	buf.c \
+	chunk.c \
+	common.c \
 	data.c \
+	ftypes.c \
 	file_srm.c \
 	file_wkt.c \
-	pc5.c
+	fixup.c \
+	io.c \
+	ios.c \
+	marker.c \
+	pc.c \
+	pc5.c \
+	split.c
 
 bin_PROGRAMS=srmcmd
 
