--- a/configure.ac
+++ b/configure.ac
@@ -32,10 +32,13 @@ AC_SYS_POSIX_TERMIOS
 AC_C_CONST
 AC_C_INLINE
 AC_TYPE_INT32_T
+AC_TYPE_INT16_T
 AC_TYPE_INT64_T
+AC_TYPE_INT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT64_T
+AC_TYPE_UINT8_T
 AC_TYPE_SIZE_T
 AC_STRUCT_TM
 
